k8s/frontend/client-deployment.yml
# frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: locker01/assessment-tax-client:v1
        ports:
        - containerPort: 3000
