k8s/frontend/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
